--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ body {
     color: #0a0a23;
   }
 
+  h1 {
+    max-width: 37.25rem;
+    padding: 1.5rem 1.25rem;
+    margin: 0 auto;
+  }
+
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
@@ -20,4 +26,7 @@ body {
     height: 1px;
     overflow: hidden;
     white-space: nowrap;
+    position: absolute;
+    padding: 0;
+    margin: -1px;
   }
