--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,20 @@ body {
     margin: 0 auto;
   }
 
+  h1 .flex {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+
+  h1 .flex span:first-of-type {
+    font-size: 0.7em; 
+  }
+
+  h1 .flex span:last-of-type {
+    font-size: 1.2em;
+  }
+
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
