--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,29 @@ body {
     font-size: 1.2em;
   }
 
+  section {
+    max-width: 40rem;
+    margin: 0 auto;
+    border: 2px solid #d0d0d5;
+  }
+
+  #years {
+    display: flex;
+    justify-content: flex-end;
+    position: sticky;
+    top: 0;
+    background-color: #0a0a23;
+    color: #fff;
+    margin: 0 -2px;
+    padding: 0.5rem calc(1.25rem + 2px) 0.5rem 0;
+    z-index: 999;
+  }
+
+  #years span[class] {
+    text-align: right;
+    font-weight: bold;
+    width: 4.5rem;
+  }
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
