--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ html {
 
 body {
     font-family: sans-serif;
-    color: #0a0a23;
+    color: Orange;
+    background-color: ForestGreen;
   }
 
   h1 {
@@ -33,7 +34,8 @@ body {
   section {
     max-width: 40rem;
     margin: 0 auto;
-    border: 2px solid #d0d0d5;
+    border: 2px solid gray;
+    background-color: lightgreen;
   }
 
   #years {
