--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ html {
 
 body {
     font-family: sans-serif;
-    color: Orange;
-    background-color: ForestGreen;
+    color: rgb(16, 14, 11);
+    background-color: rgb(189, 192, 189);
   }
 
   h1 {
@@ -55,17 +55,26 @@ body {
     font-weight: bold;
     width: 4.5rem;
   }
+
+  .table-wrap {
+    padding: 0 0.75rem 1.5rem 0.75rem;
+  }
+
+  span:not(.sr-only) {
+    font-weight: normal;
+  }
+
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
-    border: 0;
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    white-space: nowrap;
-    position: absolute;
-    padding: 0;
-    margin: -1px;
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+    clip-path: inset(50%) !important;
+    width: 1px !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    white-space: nowrap !important;
+    position: absolute !important;
+    padding: 0 !important;
+    margin: -1px !important;
   }
