--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,21 @@ body {
     padding: 0 0.75rem 1.5rem 0.75rem;
   }
 
-  span:not(.sr-only) {
+  span {
+    font-weight: normal;
+  }
+
+  table {
+    border-collapse: collapse;
+    border: 0;
+    position: relative;
+    width: 100%;
+    margin-top: 3rem;
+  }
+
+  table caption {
+    color: #356eaf;
+    font-size: 1.3em;
     font-weight: normal;
   }
 
