--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,20 @@ body {
     color: #356eaf;
     font-size: 1.3em;
     font-weight: normal;
+    top: -2.25rem;
+    left: 0.5rem;
+    position: absolute;
+
+  }
+
+  tbody td {
+    width: 100vw;
+    max-width: 4rem;
+    min-width: 4rem;
+  }
+
+  tbody th {
+    width: calc(100% - 12rem);
   }
 
   /* Ensure elements are completely hidden visually.*/
