--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,29 @@ body {
     width: calc(100% - 12rem);
   }
 
+  tr[class="total"] {
+    border-bottom: 4px double #0a0a23;
+    font-weight: bold;
+  }
+
+  tr[class="total"] {
+    text-align: left;
+    padding: 0.5rem 0 0.25rem 0.5rem;
+  }
+
+  tr.total td {
+    text-align: right;
+    padding: 0 0.25rem;
+  }
+
+  tr.total td:nth-child(3) {
+    padding-right: 0.5rem;
+  }
+
+  tr.total:hover {
+    background-color: #99c9ff;
+  }
+
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
