--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,16 @@ body {
     margin-right: -13.5rem;
   }
 
+  tr.data td {
+    vertical-align: top;
+    text-align: right;
+    padding: 0.3rem 0.25rem 0;
+  }
+
+  tr.data td:last-of-type {
+    padding-right: 0.5rem;
+  }
+
   /* Ensure elements are completely hidden visually.*/
 
   span[class~="sr-only"] {
